Replaced speed test program

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node ./run.js"
   },
   "dependencies": {
-    "express": "~4.16.1",
-    "speedtest-net": "^1.5.1"
+    "express": "~4.16.1"
   }
 }
